# field-utils

./: .gitignore  README.md
.github/: CODEOWNERS
collector-configs/: README.md  headsampling.yaml  k8sattributes.yaml  kinesis-example.yaml  multiple-exports-hny-nr-ls.yaml
collector-configs/add-pod-names/: README.md  collector-config.yaml  collector-config2.yaml  docker-compose.yml
collector-configs/k8s-metrics/: 01-namespace.yaml  02-serviceaccount.yaml  03-clusterrole.yaml  04-clusterrolebinding.yaml  05-configmap.yaml  06-daemonset.yaml
collector-configs/metric-examples/: kubletstats.yaml
collector-configs/webhookevents/: README.md  otel-webhook-receiver.yaml
devcontainer/: README.md  devcontainer.json  docker-compose-apps.yml  docker-compose.yml  postCreateCommand.sh
devcontainer/collector/: firstcol.yaml
devcontainer/refinery/: config.yaml  rules.yaml
otel-playground/: README.md  trace.json
otel-playground/otelcol/: docker-compose.yml  otelcol-config.yaml
otel-playground/refinery/: config.yaml  docker-compose.yml  rules.yaml
starter-packs/: README.md
starter-packs/refinery-marketplace/: README.md  refinery.yaml  stack_parameters.json.example
starter-packs/refinery-operations/: README.md
tools/board_builder/: README.md  board_builder.py  pyproject.toml
tools/board_builder/lib/: __init__.py  builders.py  hnyapi.py
tools/hny_dataset_cleanup_tool/: hny-column-cleanup.py  hny-dataset-cleanup.py
tools/slo_report/: README.md  pyproject.toml  slo_report.py
tools/slo_report/lib/: __init__.py  fetchers.py  hnyapi.py
(+48 files in other folders)
